<resources>
    <string name="app_name">JGSSAKMT Admin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">JGSSAKMT Admin</string>
    <string name="nav_header_subtitle">joygurutrust2004@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="no_content">Nothing to load. Add something…</string>
    <string name="home_second">Home Second</string>

    <!-- Home page strings-->
    <string name="add_new_blog">Add New Blog</string>
    <string name="edit_blog">Edit Existing Blog</string>
    <string name="add_new_event">Add New Event</string>
    <string name="edit_event">Edit Existing Event</string>

    <!-- Blog Page Strings-->
    <string name="title_activity_blog">BlogActivity</string>
    <string name="blog_icon">Blog Icon</string>
    <string name="blog_excerpt">Blog Excerpt</string>
    <string name="blog_title">Blog Title</string>

    <!-- Edit Blog Strings-->
    <string name="edit_blog_title">Edit Blog Title</string>
    <string name="edit_blog_excerpt">Edit Blog Excerpt</string>
    <string name="edit_blog_image">Edit Blog Image Link</string>
    <string name="edit_blog_content">Edit Blog Content</string>
    <string name="tap_here">Tap here to edit…</string>
    <string name="save_edit">Save Edits</string>

    <!-- Add Blog Strings-->
    <string name="add_blog_title">Add Blog Title</string>
    <string name="add_blog_excerpt">Add Blog Excerpt</string>
    <string name="add_blog_image">Add Blog Image Link</string>
    <string name="add_blog_content">Add Blog Content</string>
    <string name="save_add">Add Blog</string>

    <!-- View Blog Strings-->
    <string name="view_blog_title">View Blog Title</string>
    <string name="view_blog_image">View Blog Image</string>
    <string name="view_blog_posted">View Blog Posted</string>
    <string name="view_blog_edited">View Blog Edited</string>
    <string name="view_blog_content">View Blog Content</string>

    <!-- Delete blog Strings-->
    <string name="delete_blog">Delete Blog</string>
    <string name="del_blog_body">Are you sure you want to delete this blog?</string>
    <string name="button_affirmative">Yes</string>
    <string name="button_negative">Cancel</string>

    <!-- Event Page Strings-->
    <string name="event_icon">Event Icon</string>
    <string name="event_title">Event Title</string>
    <string name="event_start">Event Start</string>
    <string name="event_end">Event End</string>
    <string name="event_excerpt">Event Excerpt</string>

    <!-- Edit Event Strings-->
    <string name="edit_event_title">Edit Event Title</string>
    <string name="edit_event_excerpt">Edit Event Excerpt</string>
    <string name="edit_event_image">Edit Event Image Link</string>
    <string name="edit_event_content">Edit Event Content</string>
    <string name="edit_event_start_date">Edit Event Start Date</string>
    <string name="edit_event_end_date">Edit Event End Date</string>
    <string name="delete_event">Delete Event</string>
    <string name="del_event_body">Are you sure you want to delete this event?</string>

    <!-- Add Event Strings-->
    <string name="add_event_title">Add Event Title</string>
    <string name="add_event_excerpt">Add Event Excerpt</string>
    <string name="add_event_image">Add Event Image Link</string>
    <string name="add_event_start">Add Event Start Time</string>
    <string name="add_event_end">Add Event End Time</string>
    <string name="add_event_content">Add Event Content</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="save_event">Add Event</string>

    <!-- View Event Strings-->
    <string name="view_event_title">View Event Title</string>
    <string name="view_event_image">View Event Image</string>
    <string name="view_event_posted">View Event Posted</string>
    <string name="view_event_edited">View Event Edited</string>
    <string name="view_event_content">View Event Content</string>

    <!-- Page Strings-->
    <string name="page_title">Page Header</string>
    <string name="page_excerpt">Page Excerpt</string>

    <!-- Edit Page Strings -->
    <string name="edit_page_header">Edit Page Header</string>
    <string name="edit_page_name">Edit Page Name</string>
    <string name="edit_page_excerpt">Edit Page Excerpt</string>
    <string name="save_page">Save Page</string>
    <string name="add_para">Add Paragraph</string>
    <string name="delete_page">Delete Page</string>
    <string name="del_page_body">Are you sure you want to delete this page?</string>

    <!-- Add Page Strings -->
    <string name="add_page_header">Add Page Header</string>
    <string name="add_page_name">Add Page Name</string>
    <string name="add_page_excerpt">Add Page Excerpt</string>
    <string name="add_page">Add Page</string>

    <!-- View Message Strings-->
    <string name="message_email">Email</string>
    <string name="message_mobile">Mobile No</string>
    <string name="message_name">Name</string>
    <string name="message_body">Message</string>
    <string name="del_message">Delete Message</string>
    <string name="del_message_body">Are you sure you want to delete this message?</string>

    <!-- Edit Paragraph Strings-->
    <string name="edit_para_header">Edit Paragraph Header</string>
    <string name="edit_para_body">Edit Paragraph Body</string>
    <string name="edit_para_image">Edit Paragraph Image</string>
    <string name="para_del_head">Delete Paragraph</string>
    <string name="para_del_body">Are you sure you want to delete this Paragraph? The action is not reversible.</string>

    <!-- View Page Strings-->
    <string name="view_page_header">View Page Header</string>
    <string name="view_page_name">View Page Name</string>
    <string name="posted_edited">Posted/Edited</string>
    <string name="view_page_para">View Page Paragraph Header</string>
    <string name="view_page_body">View Page Paragraph body</string>
    <string name="view_page_image">View Page Paragraph Image</string>

    <!-- Carousel Strings -->
    <string name="carousel_image">Carousel Image</string>
    <string name="carousel_Label">Carousel Label</string>
    <string name="carousel_body">Carousel Body</string>
    <string name="carousel_add_label">Add Carousel Label</string>
    <string name="carousel_add_image">Add Carousel Image</string>
    <string name="carousel_add_body">Add Carousel Body</string>
    <string name="save_carousel">Add Carousel</string>
    <string name="carousels">View Carousels</string>
    <string name="cara_del_head">Delete Carousel</string>
    <string name="cara_del_body">Are you sure you want to delete this Carousel? The action is not reversible.</string>

    <!-- Remove or change this placeholder text -->
    <string name="title_activity_add_blog">Add New Blog</string>
    <string name="title_activity_edit_blog">Edit Existing Blog</string>
    <string name="title_activity_event">Events</string>
    <string name="title_activity_add_event">Add New Event</string>
    <string name="title_activity_edit_event">Edit Existing Event</string>
    <string name="title_activity_page">Pages</string>
    <string name="title_activity_edit_page">Edit Existing Page</string>
    <string name="title_activity_view_blog">View Blog</string>
    <string name="title_activity_view_event">View Event</string>
    <string name="default_time">00:00</string>
    <string name="no_img">No Image Linked</string>
    <string name="no_img_body">Do you want to continue without adding any image?</string>
    <string name="title_activity_message">Messages</string>
    <string name="title_activity_view_message">View Message</string>
    <string name="title_activity_add_page">Add New Page</string>
    <string name="title_activity_view_page">View Page</string>
    <string name="title_activity_carousel">Carousels</string>
    <string name="title_activity_add_carousel">Add Carousel</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
