<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:icon="@drawable/ic_menu_camera"

            android:title="@string/menu_home" />
    </group>

    <item android:title="@string/title_activity_blog">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/navAddBlog"
                    android:icon="@drawable/ic_blogger"
                    android:title="@string/title_activity_add_blog" />
                <item
                    android:id="@+id/navEditBlog"
                    android:icon="@drawable/ic_edit_blog"
                    android:title="@string/title_activity_edit_blog" />
            </group>
        </menu>
    </item>

    <item android:title="@string/title_activity_event">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/navAddEvent"
                    android:icon="@drawable/ic_event"
                    android:title="@string/title_activity_add_event" />
                <item
                    android:id="@+id/navEditEvent"
                    android:icon="@drawable/ic_edit_event"
                    android:title="@string/title_activity_edit_event" />
            </group>
        </menu>
    </item>

    <item android:title="@string/title_activity_page">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/navAddPage"
                    android:icon="@drawable/ic_event"
                    android:title="@string/title_activity_add_page" />
                <item
                    android:id="@+id/navEditPage"
                    android:icon="@drawable/ic_edit_event"
                    android:title="@string/title_activity_edit_page" />
            </group>
        </menu>
    </item>

    <item android:title="@string/title_activity_message">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/navMessage"
                    android:icon="@drawable/ic_event"
                    android:title="@string/title_activity_message" />
            </group>
        </menu>
    </item>
</menu>
