<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_add_carousel">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/carouselAddLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carousel_add_label"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/carouselAddLabelEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tap_here"
            android:inputType="textPersonName|textCapWords"
            android:textColor="@color/colorSecondaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carouselAddLabel"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/carouselAddImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carousel_add_image"
            android:layout_margin="5dp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carouselAddLabelEdit" />

        <EditText
            android:id="@+id/carouselAddImageEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tap_here"
            android:inputType="textUri"
            android:textColor="@color/colorSecondaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carouselAddImage"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/carouselAddBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carousel_add_body"
            android:layout_margin="5dp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carouselAddImageEdit" />

        <EditText
            android:id="@+id/carouselAddBodyEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/tap_here"
            android:lines="10"
            android:inputType="textMultiLine|textCapSentences"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carouselAddBody"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/carouselAddSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="addCarousel"
            android:text="@string/save_carousel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/carouselAddCancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carouselAddBodyEdit" />

        <Button
            android:id="@+id/carouselAddCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="cancel"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/carouselAddSave"
            app:layout_constraintTop_toBottomOf="@+id/carouselAddBodyEdit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>