<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_add_event"
    android:padding="10dp">

    <!--fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" /-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no">

        <TextView
            android:id="@+id/eventAddContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/add_event_content"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventExcerptAddText" />

        <EditText
            android:id="@+id/eventAddContentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/tap_here"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="15"
            android:textColor="@color/colorSecondaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventAddContent" />

        <TextView
            android:id="@+id/eventExcerptAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/add_event_excerpt"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addEventEndDateEdit" />

        <EditText
            android:id="@+id/eventExcerptAddText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/tap_here"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="3"
            android:textColor="@color/colorSecondaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventExcerptAdd" />

        <TextView
            android:id="@+id/eventImgurlAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/add_event_image"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventTitleAddText" />

        <EditText
            android:id="@+id/eventImgurlAddText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tap_here"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:textColor="@color/colorSecondaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventImgurlAdd" />

        <TextView
            android:id="@+id/eventTitleAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/add_event_title"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/eventTitleAddText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/tap_here"
            android:importantForAutofill="no"
            android:inputType="textShortMessage|textCapWords"
            android:textColor="@color/colorSecondaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventTitleAdd" />

        <Button
            android:id="@+id/eventAddSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="addEvent"
            android:text="@string/save_event"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/eventAddCancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventAddContentText" />

        <Button
            android:id="@+id/eventAddCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="cancel"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/eventAddSave"
            app:layout_constraintTop_toBottomOf="@+id/eventAddContentText" />

        <TextView
            android:id="@+id/addEventStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/add_event_start"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventImgurlAddText" />

        <EditText
            android:id="@+id/addEventStartDateEdit"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/date"
            android:importantForAutofill="no"
            android:inputType="date"
            android:onClick="showDatePickerDialog"
            android:textColor="@color/colorSecondaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addEventStartDate" />

        <EditText
            android:id="@+id/addEventStartTimeEdit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/time"
            android:importantForAutofill="no"
            android:inputType="time"
            android:onClick="showTimePickerDialog"
            android:text="@string/default_time"
            android:textColor="@color/colorSecondaryText"
            app:layout_constraintStart_toEndOf="@id/addEventStartDateEdit"
            app:layout_constraintTop_toBottomOf="@+id/addEventStartDate" />

        <TextView
            android:id="@+id/addEventEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/add_event_end"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addEventStartDateEdit" />

        <EditText
            android:id="@+id/addEventEndDateEdit"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/date"
            android:importantForAutofill="no"
            android:inputType="date"
            android:onClick="showDatePickerDialog"
            android:textColor="@color/colorSecondaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addEventEndDate" />

        <EditText
            android:id="@+id/addEventEndTimeEdit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/time"
            android:importantForAutofill="no"
            android:inputType="time"
            android:onClick="showTimePickerDialog"
            android:text="@string/default_time"
            android:textColor="@color/colorSecondaryText"
            app:layout_constraintStart_toEndOf="@id/addEventEndDateEdit"
            app:layout_constraintTop_toBottomOf="@+id/addEventEndDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>