<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_edit_page">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/editPageHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_page_header"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editPageHeaderEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/tap_here"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/colorSecondaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPageHeaderText" />

        <TextView
            android:id="@+id/editPageNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_page_name"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPageHeaderEditText" />

        <EditText
            android:id="@+id/editPageNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:textColor="@color/colorSecondaryText"
            android:hint="@string/tap_here"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPageNameText" />

        <TextView
            android:id="@+id/editPageExcerptText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_page_excerpt"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPageNameEditText" />

        <EditText
            android:id="@+id/editPageExcerptEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:gravity="start|top"
            android:textColor="@color/colorSecondaryText"
            android:hint="@string/tap_here"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textCapSentences"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPageExcerptText" />

        <Button
            android:id="@+id/addPara"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_para"
            android:onClick="addPara"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/savePage" />

        <Button
            android:id="@+id/savePage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save_page"
            android:onClick="savePage"
            app:layout_constraintEnd_toStartOf="@id/addPara"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/editPageRecyclerView"
            app:layout_constraintBottom_toTopOf="@id/savePage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editPageExcerptEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>